# axera-multistream-yolo

./: .gitignore  CMakeLists.txt  README.md
configs/: app_config.json  app_config_16ch_360p.json  app_config_1ch_720p.json  app_config_24ch_360p.json  app_config_360p.json  app_config_36ch_360p.json  app_config_6ch_720p.json  app_config_720p.json
include/app/: config.hpp  inference_engine.hpp  mosaic_renderer.hpp  pipeline.hpp  result_collector.hpp  stream_source.hpp
include/app/detail/: axcl_context.hpp  axcl_model.hpp  class_names.hpp  postprocess.hpp  ringbuffer.hpp  thread_safe_queue.hpp
src/: axcl_model.cpp  config.cpp  inference_engine.cpp  main.cpp  mosaic_renderer.cpp  pipeline.cpp  postprocess.cpp  result_collector.cpp  stream_source.cpp
tests/unit/: CMakeLists.txt  test_axcl_context.cpp  test_config.cpp  test_inference_engine.cpp  test_mosaic_renderer.cpp  test_postprocess.cpp  test_ringbuffer.cpp  test_stream_source.cpp  test_thread_safe_queue.cpp
tools/: CMakeLists.txt  npu_bench.cpp
yolo26_demo/: CMakeLists.txt
yolo26_demo/axcl/: yolo26.cc
yolo26_demo/axcl/ax_model_runner/: ax_model_runner.hpp  ax_model_runner_axcl.cpp
yolo26_demo/base/: common.hpp  detection.hpp
yolo26_demo/utilities/: args.hpp  cmdline.hpp  file.hpp  split.hpp  timer.hpp
